y.output
Grammar

    0 $accept: progr $end

    1 progr: declaratii_globale declaratii_fnc declaratii_structuri bloc

    2 declaratii_globale: %empty
    3                   | GLOBDEF declaratii_globale_atomic

    4 declaratii_globale_atomic: %empty
    5                          | declaratii_globale_atomic tip_date lista_id ';'

    6 declaratii_fnc: %empty
    7               | FNCDEF declaratii_fnc_atomic

    8 declaratii_fnc_atomic: %empty
    9                      | declaratii_fnc_atomic tip_date ID '(' lista_param ')' ';'
   10                      | declaratii_fnc_atomic tip_date ID '(' lista_param ')' '{' list '}'

   11 declaratii_structuri: %empty
   12                     | STRUCTDEF declaratii_structuri_atomic

   13 declaratii_structuri_atomic: %empty
   14                            | declaratii_structuri_atomic CLASS ID '{' declaratii_globale_atomic '}'

   15 tip_date: TIP
   16         | CONST TIP
   17         | CLASS ID
   18         | CONST CLASS ID
   19         | typeof
   20         | CONST typeof

   21 typeof: TYPEOF '(' ID ')'
   22       | TYPEOF '(' TIP ')'
   23       | TYPEOF '(' NR ')'
   24       | TYPEOF '(' BOOL ')'
   25       | TYPEOF '(' STRING ')'
   26       | TYPEOF '(' CHAR ')'
   27       | TYPEOF '(' FLOAT ')'

   28 lista_array: %empty
   29            | '[' NR ']' lista_array

   30 lista_id: ID lista_array
   31         | ID lista_array ASSIGN expresie
   32         | lista_id ',' ID lista_array
   33         | lista_id ',' ID lista_array ASSIGN expresie

   34 lista_param: %empty
   35            | param
   36            | lista_param ',' param

   37 param: tip_date ID

   38 bloc: BGIN list END

   39 instr_bloc: statement
   40           | '{' list '}'

   41 list: statement ';'
   42     | control_statement
   43     | list control_statement
   44     | list statement ';'

   45 lvalue: ID
   46       | lvalue '.' ID
   47       | lvalue '[' expresie ']'

   48 assignment: lvalue ASSIGN expresie

   49 statement: assignment
   50          | lvalue '(' lista_apel ')'
   51          | eval
   52          | control_statement

   53 control_statement: if_statement
   54                  | while_statement
   55                  | do_while_statement
   56                  | for_statement

   57 if_statement: IF '(' boolean_expr ')' instr_bloc else_statement
   58             | IF '(' boolean_expr ')' instr_bloc

   59 else_statement: ELSE instr_bloc

   60 while_statement: WHILE '(' boolean_expr ')' instr_bloc

   61 do_while_statement: DO instr_bloc WHILE '(' boolean_expr ')' ';'

   62 for_statement: FOR '(' assignment ';' boolean_expr ';' assignment ')' instr_bloc

   63 boolean_expr_atomic: expresie CMP_OP expresie

   64 boolean_expr: '(' boolean_expr ')'
   65             | boolean_expr BOOLAND boolean_expr
   66             | boolean_expr BOOLOR boolean_expr
   67             | boolean_expr_atomic

   68 lista_apel: %empty
   69           | expresie
   70           | lista_apel ',' expresie

   71 eval: EVAL '(' expresie ')'

   72 expresie: expresie '+' expresie
   73         | expresie '*' expresie
   74         | expresie '-' expresie
   75         | expresie '/' expresie
   76         | '(' expresie ')'
   77         | NR
   78         | STRING
   79         | FLOAT
   80         | CHAR
   81         | BOOL
   82         | lvalue
   83         | lvalue '(' lista_apel ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 10 21 22 23 24 25 26 27 50 57 58 60 61 62 64 71 76 83
    ')' (41) 9 10 21 22 23 24 25 26 27 50 57 58 60 61 62 64 71 76 83
    '*' (42) 73
    '+' (43) 72
    ',' (44) 32 33 36 70
    '-' (45) 74
    '.' (46) 46
    '/' (47) 75
    ';' (59) 5 9 41 44 61 62
    '[' (91) 29 47
    ']' (93) 29 47
    '{' (123) 10 14 40
    '}' (125) 10 14 40
    error (256)
    ID <strval> (258) 9 10 14 17 18 21 30 31 32 33 37 45 46
    TIP <strval> (259) 15 16 22
    ASSIGN <strval> (260) 31 33 48
    NR <strval> (261) 23 29 77
    CMP_OP <strval> (262) 63
    CLASS <strval> (263) 14 17 18
    STRING <strval> (264) 25 78
    FLOAT <floatval> (265) 27 79
    CHAR <charval> (266) 26 80
    BOOL <intval> (267) 24 81
    BGIN (268) 38
    END (269) 38
    CONST (270) 16 18 20
    IF (271) 57 58
    WHILE (272) 60 61
    DO (273) 61
    ELSE (274) 59
    FOR (275) 62
    BOOLAND (276) 65
    BOOLOR (277) 66
    TYPEOF (278) 21 22 23 24 25 26 27
    EVAL (279) 71
    GLOBDEF (280) 3
    FNCDEF (281) 7
    STRUCTDEF (282) 12


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    progr (42)
        on left: 1
        on right: 0
    declaratii_globale (43)
        on left: 2 3
        on right: 1
    declaratii_globale_atomic (44)
        on left: 4 5
        on right: 3 5 14
    declaratii_fnc (45)
        on left: 6 7
        on right: 1
    declaratii_fnc_atomic (46)
        on left: 8 9 10
        on right: 7 9 10
    declaratii_structuri (47)
        on left: 11 12
        on right: 1
    declaratii_structuri_atomic (48)
        on left: 13 14
        on right: 12 14
    tip_date (49)
        on left: 15 16 17 18 19 20
        on right: 5 9 10 37
    typeof (50)
        on left: 21 22 23 24 25 26 27
        on right: 19 20
    lista_array (51)
        on left: 28 29
        on right: 29 30 31 32 33
    lista_id (52)
        on left: 30 31 32 33
        on right: 5 32 33
    lista_param (53)
        on left: 34 35 36
        on right: 9 10 36
    param (54)
        on left: 37
        on right: 35 36
    bloc (55)
        on left: 38
        on right: 1
    instr_bloc (56)
        on left: 39 40
        on right: 57 58 59 60 61 62
    list (57)
        on left: 41 42 43 44
        on right: 10 38 40 43 44
    lvalue (58)
        on left: 45 46 47
        on right: 46 47 48 50 82 83
    assignment (59)
        on left: 48
        on right: 49 62
    statement (60)
        on left: 49 50 51 52
        on right: 39 41 44
    control_statement (61)
        on left: 53 54 55 56
        on right: 42 43 52
    if_statement (62)
        on left: 57 58
        on right: 53
    else_statement (63)
        on left: 59
        on right: 57
    while_statement (64)
        on left: 60
        on right: 54
    do_while_statement (65)
        on left: 61
        on right: 55
    for_statement (66)
        on left: 62
        on right: 56
    boolean_expr_atomic (67)
        on left: 63
        on right: 67
    boolean_expr (68)
        on left: 64 65 66 67
        on right: 57 58 60 61 62 64 65 66
    lista_apel (69)
        on left: 68 69 70
        on right: 50 70 83
    eval (70)
        on left: 71
        on right: 51
    expresie (71)
        on left: 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 31 33 47 48 63 69 70 71 72 73 74 75 76


State 0

    0 $accept: . progr $end

    GLOBDEF  shift, and go to state 1

    $default  reduce using rule 2 (declaratii_globale)

    progr               go to state 2
    declaratii_globale  go to state 3


State 1

    3 declaratii_globale: GLOBDEF . declaratii_globale_atomic

    $default  reduce using rule 4 (declaratii_globale_atomic)

    declaratii_globale_atomic  go to state 4


State 2

    0 $accept: progr . $end

    $end  shift, and go to state 5


State 3

    1 progr: declaratii_globale . declaratii_fnc declaratii_structuri bloc

    FNCDEF  shift, and go to state 6

    $default  reduce using rule 6 (declaratii_fnc)

    declaratii_fnc  go to state 7


State 4

    3 declaratii_globale: GLOBDEF declaratii_globale_atomic .
    5 declaratii_globale_atomic: declaratii_globale_atomic . tip_date lista_id ';'

    TIP     shift, and go to state 8
    CLASS   shift, and go to state 9
    CONST   shift, and go to state 10
    TYPEOF  shift, and go to state 11

    $default  reduce using rule 3 (declaratii_globale)

    tip_date  go to state 12
    typeof    go to state 13


State 5

    0 $accept: progr $end .

    $default  accept


State 6

    7 declaratii_fnc: FNCDEF . declaratii_fnc_atomic

    $default  reduce using rule 8 (declaratii_fnc_atomic)

    declaratii_fnc_atomic  go to state 14


State 7

    1 progr: declaratii_globale declaratii_fnc . declaratii_structuri bloc

    STRUCTDEF  shift, and go to state 15

    $default  reduce using rule 11 (declaratii_structuri)

    declaratii_structuri  go to state 16


State 8

   15 tip_date: TIP .

    $default  reduce using rule 15 (tip_date)


State 9

   17 tip_date: CLASS . ID

    ID  shift, and go to state 17


State 10

   16 tip_date: CONST . TIP
   18         | CONST . CLASS ID
   20         | CONST . typeof

    TIP     shift, and go to state 18
    CLASS   shift, and go to state 19
    TYPEOF  shift, and go to state 11

    typeof  go to state 20


State 11

   21 typeof: TYPEOF . '(' ID ')'
   22       | TYPEOF . '(' TIP ')'
   23       | TYPEOF . '(' NR ')'
   24       | TYPEOF . '(' BOOL ')'
   25       | TYPEOF . '(' STRING ')'
   26       | TYPEOF . '(' CHAR ')'
   27       | TYPEOF . '(' FLOAT ')'

    '('  shift, and go to state 21


State 12

    5 declaratii_globale_atomic: declaratii_globale_atomic tip_date . lista_id ';'

    ID  shift, and go to state 22

    lista_id  go to state 23


State 13

   19 tip_date: typeof .

    $default  reduce using rule 19 (tip_date)


State 14

    7 declaratii_fnc: FNCDEF declaratii_fnc_atomic .
    9 declaratii_fnc_atomic: declaratii_fnc_atomic . tip_date ID '(' lista_param ')' ';'
   10                      | declaratii_fnc_atomic . tip_date ID '(' lista_param ')' '{' list '}'

    TIP     shift, and go to state 8
    CLASS   shift, and go to state 9
    CONST   shift, and go to state 10
    TYPEOF  shift, and go to state 11

    $default  reduce using rule 7 (declaratii_fnc)

    tip_date  go to state 24
    typeof    go to state 13


State 15

   12 declaratii_structuri: STRUCTDEF . declaratii_structuri_atomic

    $default  reduce using rule 13 (declaratii_structuri_atomic)

    declaratii_structuri_atomic  go to state 25


State 16

    1 progr: declaratii_globale declaratii_fnc declaratii_structuri . bloc

    BGIN  shift, and go to state 26

    bloc  go to state 27


State 17

   17 tip_date: CLASS ID .

    $default  reduce using rule 17 (tip_date)


State 18

   16 tip_date: CONST TIP .

    $default  reduce using rule 16 (tip_date)


State 19

   18 tip_date: CONST CLASS . ID

    ID  shift, and go to state 28


State 20

   20 tip_date: CONST typeof .

    $default  reduce using rule 20 (tip_date)


State 21

   21 typeof: TYPEOF '(' . ID ')'
   22       | TYPEOF '(' . TIP ')'
   23       | TYPEOF '(' . NR ')'
   24       | TYPEOF '(' . BOOL ')'
   25       | TYPEOF '(' . STRING ')'
   26       | TYPEOF '(' . CHAR ')'
   27       | TYPEOF '(' . FLOAT ')'

    ID      shift, and go to state 29
    TIP     shift, and go to state 30
    NR      shift, and go to state 31
    STRING  shift, and go to state 32
    FLOAT   shift, and go to state 33
    CHAR    shift, and go to state 34
    BOOL    shift, and go to state 35


State 22

   30 lista_id: ID . lista_array
   31         | ID . lista_array ASSIGN expresie

    '['  shift, and go to state 36

    $default  reduce using rule 28 (lista_array)

    lista_array  go to state 37


State 23

    5 declaratii_globale_atomic: declaratii_globale_atomic tip_date lista_id . ';'
   32 lista_id: lista_id . ',' ID lista_array
   33         | lista_id . ',' ID lista_array ASSIGN expresie

    ';'  shift, and go to state 38
    ','  shift, and go to state 39


State 24

    9 declaratii_fnc_atomic: declaratii_fnc_atomic tip_date . ID '(' lista_param ')' ';'
   10                      | declaratii_fnc_atomic tip_date . ID '(' lista_param ')' '{' list '}'

    ID  shift, and go to state 40


State 25

   12 declaratii_structuri: STRUCTDEF declaratii_structuri_atomic .
   14 declaratii_structuri_atomic: declaratii_structuri_atomic . CLASS ID '{' declaratii_globale_atomic '}'

    CLASS  shift, and go to state 41

    $default  reduce using rule 12 (declaratii_structuri)


State 26

   38 bloc: BGIN . list END

    ID     shift, and go to state 42
    IF     shift, and go to state 43
    WHILE  shift, and go to state 44
    DO     shift, and go to state 45
    FOR    shift, and go to state 46
    EVAL   shift, and go to state 47

    list                go to state 48
    lvalue              go to state 49
    assignment          go to state 50
    statement           go to state 51
    control_statement   go to state 52
    if_statement        go to state 53
    while_statement     go to state 54
    do_while_statement  go to state 55
    for_statement       go to state 56
    eval                go to state 57


State 27

    1 progr: declaratii_globale declaratii_fnc declaratii_structuri bloc .

    $default  reduce using rule 1 (progr)


State 28

   18 tip_date: CONST CLASS ID .

    $default  reduce using rule 18 (tip_date)


State 29

   21 typeof: TYPEOF '(' ID . ')'

    ')'  shift, and go to state 58


State 30

   22 typeof: TYPEOF '(' TIP . ')'

    ')'  shift, and go to state 59


State 31

   23 typeof: TYPEOF '(' NR . ')'

    ')'  shift, and go to state 60


State 32

   25 typeof: TYPEOF '(' STRING . ')'

    ')'  shift, and go to state 61


State 33

   27 typeof: TYPEOF '(' FLOAT . ')'

    ')'  shift, and go to state 62


State 34

   26 typeof: TYPEOF '(' CHAR . ')'

    ')'  shift, and go to state 63


State 35

   24 typeof: TYPEOF '(' BOOL . ')'

    ')'  shift, and go to state 64


State 36

   29 lista_array: '[' . NR ']' lista_array

    NR  shift, and go to state 65


State 37

   30 lista_id: ID lista_array .
   31         | ID lista_array . ASSIGN expresie

    ASSIGN  shift, and go to state 66

    $default  reduce using rule 30 (lista_id)


State 38

    5 declaratii_globale_atomic: declaratii_globale_atomic tip_date lista_id ';' .

    $default  reduce using rule 5 (declaratii_globale_atomic)


State 39

   32 lista_id: lista_id ',' . ID lista_array
   33         | lista_id ',' . ID lista_array ASSIGN expresie

    ID  shift, and go to state 67


State 40

    9 declaratii_fnc_atomic: declaratii_fnc_atomic tip_date ID . '(' lista_param ')' ';'
   10                      | declaratii_fnc_atomic tip_date ID . '(' lista_param ')' '{' list '}'

    '('  shift, and go to state 68


State 41

   14 declaratii_structuri_atomic: declaratii_structuri_atomic CLASS . ID '{' declaratii_globale_atomic '}'

    ID  shift, and go to state 69


State 42

   45 lvalue: ID .

    $default  reduce using rule 45 (lvalue)


State 43

   57 if_statement: IF . '(' boolean_expr ')' instr_bloc else_statement
   58             | IF . '(' boolean_expr ')' instr_bloc

    '('  shift, and go to state 70


State 44

   60 while_statement: WHILE . '(' boolean_expr ')' instr_bloc

    '('  shift, and go to state 71


State 45

   61 do_while_statement: DO . instr_bloc WHILE '(' boolean_expr ')' ';'

    ID     shift, and go to state 42
    IF     shift, and go to state 43
    WHILE  shift, and go to state 44
    DO     shift, and go to state 45
    FOR    shift, and go to state 46
    EVAL   shift, and go to state 47
    '{'    shift, and go to state 72

    instr_bloc          go to state 73
    lvalue              go to state 49
    assignment          go to state 50
    statement           go to state 74
    control_statement   go to state 75
    if_statement        go to state 53
    while_statement     go to state 54
    do_while_statement  go to state 55
    for_statement       go to state 56
    eval                go to state 57


State 46

   62 for_statement: FOR . '(' assignment ';' boolean_expr ';' assignment ')' instr_bloc

    '('  shift, and go to state 76


State 47

   71 eval: EVAL . '(' expresie ')'

    '('  shift, and go to state 77


State 48

   38 bloc: BGIN list . END
   43 list: list . control_statement
   44     | list . statement ';'

    ID     shift, and go to state 42
    END    shift, and go to state 78
    IF     shift, and go to state 43
    WHILE  shift, and go to state 44
    DO     shift, and go to state 45
    FOR    shift, and go to state 46
    EVAL   shift, and go to state 47

    lvalue              go to state 49
    assignment          go to state 50
    statement           go to state 79
    control_statement   go to state 80
    if_statement        go to state 53
    while_statement     go to state 54
    do_while_statement  go to state 55
    for_statement       go to state 56
    eval                go to state 57


State 49

   46 lvalue: lvalue . '.' ID
   47       | lvalue . '[' expresie ']'
   48 assignment: lvalue . ASSIGN expresie
   50 statement: lvalue . '(' lista_apel ')'

    ASSIGN  shift, and go to state 81
    '('     shift, and go to state 82
    '['     shift, and go to state 83
    '.'     shift, and go to state 84


State 50

   49 statement: assignment .

    $default  reduce using rule 49 (statement)


State 51

   41 list: statement . ';'

    ';'  shift, and go to state 85


State 52

   42 list: control_statement .
   52 statement: control_statement .

    ';'       reduce using rule 52 (statement)
    $default  reduce using rule 42 (list)


State 53

   53 control_statement: if_statement .

    $default  reduce using rule 53 (control_statement)


State 54

   54 control_statement: while_statement .

    $default  reduce using rule 54 (control_statement)


State 55

   55 control_statement: do_while_statement .

    $default  reduce using rule 55 (control_statement)


State 56

   56 control_statement: for_statement .

    $default  reduce using rule 56 (control_statement)


State 57

   51 statement: eval .

    $default  reduce using rule 51 (statement)


State 58

   21 typeof: TYPEOF '(' ID ')' .

    $default  reduce using rule 21 (typeof)


State 59

   22 typeof: TYPEOF '(' TIP ')' .

    $default  reduce using rule 22 (typeof)


State 60

   23 typeof: TYPEOF '(' NR ')' .

    $default  reduce using rule 23 (typeof)


State 61

   25 typeof: TYPEOF '(' STRING ')' .

    $default  reduce using rule 25 (typeof)


State 62

   27 typeof: TYPEOF '(' FLOAT ')' .

    $default  reduce using rule 27 (typeof)


State 63

   26 typeof: TYPEOF '(' CHAR ')' .

    $default  reduce using rule 26 (typeof)


State 64

   24 typeof: TYPEOF '(' BOOL ')' .

    $default  reduce using rule 24 (typeof)


State 65

   29 lista_array: '[' NR . ']' lista_array

    ']'  shift, and go to state 86


State 66

   31 lista_id: ID lista_array ASSIGN . expresie

    ID      shift, and go to state 42
    NR      shift, and go to state 87
    STRING  shift, and go to state 88
    FLOAT   shift, and go to state 89
    CHAR    shift, and go to state 90
    BOOL    shift, and go to state 91
    '('     shift, and go to state 92

    lvalue    go to state 93
    expresie  go to state 94


State 67

   32 lista_id: lista_id ',' ID . lista_array
   33         | lista_id ',' ID . lista_array ASSIGN expresie

    '['  shift, and go to state 36

    $default  reduce using rule 28 (lista_array)

    lista_array  go to state 95


State 68

    9 declaratii_fnc_atomic: declaratii_fnc_atomic tip_date ID '(' . lista_param ')' ';'
   10                      | declaratii_fnc_atomic tip_date ID '(' . lista_param ')' '{' list '}'

    TIP     shift, and go to state 8
    CLASS   shift, and go to state 9
    CONST   shift, and go to state 10
    TYPEOF  shift, and go to state 11

    $default  reduce using rule 34 (lista_param)

    tip_date     go to state 96
    typeof       go to state 13
    lista_param  go to state 97
    param        go to state 98


State 69

   14 declaratii_structuri_atomic: declaratii_structuri_atomic CLASS ID . '{' declaratii_globale_atomic '}'

    '{'  shift, and go to state 99


State 70

   57 if_statement: IF '(' . boolean_expr ')' instr_bloc else_statement
   58             | IF '(' . boolean_expr ')' instr_bloc

    ID      shift, and go to state 42
    NR      shift, and go to state 87
    STRING  shift, and go to state 88
    FLOAT   shift, and go to state 89
    CHAR    shift, and go to state 90
    BOOL    shift, and go to state 91
    '('     shift, and go to state 100

    lvalue               go to state 93
    boolean_expr_atomic  go to state 101
    boolean_expr         go to state 102
    expresie             go to state 103


State 71

   60 while_statement: WHILE '(' . boolean_expr ')' instr_bloc

    ID      shift, and go to state 42
    NR      shift, and go to state 87
    STRING  shift, and go to state 88
    FLOAT   shift, and go to state 89
    CHAR    shift, and go to state 90
    BOOL    shift, and go to state 91
    '('     shift, and go to state 100

    lvalue               go to state 93
    boolean_expr_atomic  go to state 101
    boolean_expr         go to state 104
    expresie             go to state 103


State 72

   40 instr_bloc: '{' . list '}'

    ID     shift, and go to state 42
    IF     shift, and go to state 43
    WHILE  shift, and go to state 44
    DO     shift, and go to state 45
    FOR    shift, and go to state 46
    EVAL   shift, and go to state 47

    list                go to state 105
    lvalue              go to state 49
    assignment          go to state 50
    statement           go to state 51
    control_statement   go to state 52
    if_statement        go to state 53
    while_statement     go to state 54
    do_while_statement  go to state 55
    for_statement       go to state 56
    eval                go to state 57


State 73

   61 do_while_statement: DO instr_bloc . WHILE '(' boolean_expr ')' ';'

    WHILE  shift, and go to state 106


State 74

   39 instr_bloc: statement .

    $default  reduce using rule 39 (instr_bloc)


State 75

   52 statement: control_statement .

    $default  reduce using rule 52 (statement)


State 76

   62 for_statement: FOR '(' . assignment ';' boolean_expr ';' assignment ')' instr_bloc

    ID  shift, and go to state 42

    lvalue      go to state 107
    assignment  go to state 108


State 77

   71 eval: EVAL '(' . expresie ')'

    ID      shift, and go to state 42
    NR      shift, and go to state 87
    STRING  shift, and go to state 88
    FLOAT   shift, and go to state 89
    CHAR    shift, and go to state 90
    BOOL    shift, and go to state 91
    '('     shift, and go to state 92

    lvalue    go to state 93
    expresie  go to state 109


State 78

   38 bloc: BGIN list END .

    $default  reduce using rule 38 (bloc)


State 79

   44 list: list statement . ';'

    ';'  shift, and go to state 110


State 80

   43 list: list control_statement .
   52 statement: control_statement .

    ';'       reduce using rule 52 (statement)
    $default  reduce using rule 43 (list)


State 81

   48 assignment: lvalue ASSIGN . expresie
